Adding GetMonitor() + refactoring

--- a/src/UptimeRobotClient/UptimeRobotClient.csproj
+++ b/src/UptimeRobotClient/UptimeRobotClient.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Monitor.cs" />
-    <Compile Include="UptimeRobotServiceClient.cs" />
+    <Compile Include="UptimeRobotContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
