--- a/src/UptimeRobotClient.Console/UptimeRobotClient.Console.csproj
+++ b/src/UptimeRobotClient.Console/UptimeRobotClient.Console.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,9 @@
       <Project>{6D3118D9-1AB2-46CC-8B95-4A3D5C228158}</Project>
       <Name>UptimeRobotClient</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
