--- a/src/UptimeRobotClient/UptimeRobotClient.csproj
+++ b/src/UptimeRobotClient/UptimeRobotClient.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlertContact.cs" />
     <Compile Include="Monitor.cs" />
     <Compile Include="UptimeRobotClientException.cs" />
     <Compile Include="UptimeRobotContext.cs" />
